import React from 'react';

class RichText{
    text : string

    constructor(text : string){
        this.text = text;
    }

    public getJSX(){
        return <> </>
    }
}

export default RichText